release: v0.4.2 — full 0.4.1 code audit fixes
Audit of the whole 0.4.1 codebase found and fixed:
- P0: grouped count() stripped GROUP BY from the count wrapper -> counted
  rows instead of groups (also fixes grouped toPageResult totals)
- P1: count() on UNION ignored partners; FOR UPDATE rendered before LIMIT
  (invalid on MySQL/PG); groupBy+union rendered GROUP BY after the compound
- fail-fast: empty join ON groups (cross join), like/startsWith/endsWith(null),
  negative limit/offset, null primary key on update/delete(entity),
  FOR UPDATE on SQL Server (supportsForUpdate())
- robustness: enum mapping errors wrapped with valid constants/range,
  reflection access failures guided with --add-opens, connection-release
  failures no longer mask statement errors
- perf: entityMapper resolves metadata/labels once per query; VO projections
  cache setter Methods at plan build

199 tests (T1-T28) + release profile green. Versions -> 0.4.2